several small fixes to get integration tests passing as well as they were on jamma

--- a/dev/resources/settings.yml
+++ b/dev/resources/settings.yml
@@ -34,8 +34,8 @@ provisioners:
     cache:
       type: redis
       parameters:
-        host: jamma
-        port: 6379
+        host: daneel
+        port: 6479
         db: 0
 
 services:
