--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.0.1"
 authors = [
     {name = "Fred McDavid", email = "fred@frameworklabs.us"},
 ]
-description = "Yellow brick roads to LLM assistant composition and orchestration."
+description = "Ozwald is a multi-tool for container provisioning."
 readme = "README.md"
 license = {text = "MIT"}
 requires-python = ">=3.8"
