updates list_configured_services cli action to output profile and variety info

--- a/dev/resources/settings.yml
+++ b/dev/resources/settings.yml
@@ -144,6 +144,11 @@ services:
     description: SQLite vector database
     environment:
       DIMENSION: 768
+    profiles:
+      coarse:
+        environment:
+          DIMENSION: 128
+
 
 volumes:
   solar_system:
