gets python working again by pinning to a particular version of archlinux (which is pretty cool btw as a new archlinux user)

--- a/dockerfiles/Dockerfile.provisioner-api-arch
+++ b/dockerfiles/Dockerfile.provisioner-api-arch
@@ -1,5 +1,5 @@
 # Use latest Arch Linux
-FROM archlinux:latest
+FROM archlinux:base-20260104.0.477168
 
 # Set environment variables
 ENV PYTHONUNBUFFERED=1
