updates to allow the usage of realms in the config

--- a/dev/resources/settings.yml
+++ b/dev/resources/settings.yml
@@ -34,120 +34,126 @@ provisioners:
     cache:
       type: redis
       parameters:
-        host: daneel
+        host: localhost
         port: 6479
-        db: 0
+        db: 1
 
-service-definitions:
-  - name: simple_test_1
-    type: container
-    description: Simple test service
-    image: 'simple_test_1'
+realms:
+  default:
+    networks:
+      - name: default
+        type: bridge
 
-  - name: test_env_and_vols
-    type: container
-    description: Test environment and volumes
-    image: 'test_env_and_vols'
-    environment:
-      TEST_ENV_VAR: 'test_env_var_value'
-      ANOTHER_TEST_ENV_VAR: 'another_test_env_var_value'
-      FILE_LISTING_PATHS: '/solar_system'
-    volumes:
-      - name: solar_system
-        target: /solar_system
-        read_only: true
+    service-definitions:
+      - name: simple_test_1
+        type: container
+        description: Simple test service
+        image: 'simple_test_1'
 
-  - name: qwen1.5-vllm
-    type: container
-    description: DeepSeek Qwen 1.5B
-    varieties:
-      nvidia:
-        image: 'openai-api-vllm.nvidia'
+      - name: test_env_and_vols
+        type: container
+        description: Test environment and volumes
+        image: 'test_env_and_vols'
         environment:
-          GPU: true
-      amdgpu:
-        image: 'openai-api-vllm.amdgpu'
-        environment:
-          GPU: true
-      cpu-only:
-        image: 'openai-api-vllm.cpu-only'
-        environment:
-          GPU: false
-    environment:
-      MODEL_NAME: "deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B"
-    profiles:
-      embed:
-        environment:
-          CPU_OFFLOAD_GB: ""
-          GPU_MEMORY_UTILIZATION: 0.7
-          MAX_MODEL_LEN: 1100
-      no-gpu:
-        environment:
-          MAX_MODEL_LEN: 45000
-      fast-gpu:
-        environment:
-          CPU_OFFLOAD_GB: ""
-          GPU_MEMORY_UTILIZATION: 0.9
-      max-context-window:
-        environment:
-          MAX_MODEL_LEN: ""
-      small-context-window:
-        environment:
-          MAX_MODEL_LEN: 15000
+          TEST_ENV_VAR: 'test_env_var_value'
+          ANOTHER_TEST_ENV_VAR: 'another_test_env_var_value'
+          FILE_LISTING_PATHS: '/solar_system'
+        volumes:
+          - name: solar_system
+            target: /solar_system
+            read_only: true
 
-  - name: qwen7-vllm
-    type: container
-    description: DeepSeek Qwen 7B
-    varieties:
-      nvidia:
-        image: 'openai-api-vllm.nvidia'
+      - name: qwen1.5-vllm
+        type: container
+        description: DeepSeek Qwen 1.5B
+        varieties:
+          nvidia:
+            image: 'openai-api-vllm.nvidia'
+            environment:
+              GPU: true
+          amdgpu:
+            image: 'openai-api-vllm.amdgpu'
+            environment:
+              GPU: true
+          cpu-only:
+            image: 'openai-api-vllm.cpu-only'
+            environment:
+              GPU: false
         environment:
-          GPU: true
-      amdgpu:
-        image: 'openai-api-vllm.amdgpu'
+          MODEL_NAME: "deepseek-ai/DeepSeek-R1-Distill-Qwen-1.5B"
+        profiles:
+          embed:
+            environment:
+              CPU_OFFLOAD_GB: ""
+              GPU_MEMORY_UTILIZATION: 0.7
+              MAX_MODEL_LEN: 1100
+          no-gpu:
+            environment:
+              MAX_MODEL_LEN: 45000
+          fast-gpu:
+            environment:
+              CPU_OFFLOAD_GB: ""
+              GPU_MEMORY_UTILIZATION: 0.9
+          max-context-window:
+            environment:
+              MAX_MODEL_LEN: ""
+          small-context-window:
+            environment:
+              MAX_MODEL_LEN: 15000
+
+      - name: qwen7-vllm
+        type: container
+        description: DeepSeek Qwen 7B
+        varieties:
+          nvidia:
+            image: 'openai-api-vllm.nvidia'
+            environment:
+              GPU: true
+          amdgpu:
+            image: 'openai-api-vllm.amdgpu'
+            environment:
+              GPU: true
+          cpu-only:
+            image: 'openai-api-vllm.cpu-only'
+            environment:
+              GPU: false
         environment:
-          GPU: true
-      cpu-only:
-        image: 'openai-api-vllm.cpu-only'
+          MODEL_NAME: "deepseek-ai/DeepSeek-R1-Distill-Qwen-7B"
+        profiles:
+          no-gpu:
+            environment:
+              MAX_MODEL_LEN: 45000
+          fast-gpu:
+            environment:
+              CPU_OFFLOAD_GB: ""
+              GPU_MEMORY_UTILIZATION: 0.9
+          max-context-window:
+            environment:
+              MAX_MODEL_LEN: ""
+          small-context-window:
+            environment:
+              MAX_MODEL_LEN: 15000
+      - name: fiction-sources
+        type: source-files
+        description: Fiction sources in EPUB format
         environment:
-          GPU: false
-    environment:
-      MODEL_NAME: "deepseek-ai/DeepSeek-R1-Distill-Qwen-7B"
-    profiles:
-      no-gpu:
+          DIRECTORY: sources/
+      - name: chunker
+        type: container
+        description: Chunker service
         environment:
-          MAX_MODEL_LEN: 45000
-      fast-gpu:
+          SOURCES: ['fiction-sources']
+          CHUNK_SIZE: 1000
+          CHUNK_OVERLAP: 500
+      - name: sqlite-vector
+        type: container
+        description: SQLite vector database
         environment:
-          CPU_OFFLOAD_GB: ""
-          GPU_MEMORY_UTILIZATION: 0.9
-      max-context-window:
-        environment:
-          MAX_MODEL_LEN: ""
-      small-context-window:
-        environment:
-          MAX_MODEL_LEN: 15000
-  - name: fiction-sources
-    type: source-files
-    description: Fiction sources in EPUB format
-    environment:
-      DIRECTORY: sources/
-  - name: chunker
-    type: container
-    description: Chunker service
-    environment:
-      SOURCES: ['fiction-sources']
-      CHUNK_SIZE: 1000
-      CHUNK_OVERLAP: 500
-  - name: sqlite-vector
-    type: container
-    description: SQLite vector database
-    environment:
-      DIMENSION: 768
-    profiles:
-      coarse:
-        environment:
-          DIMENSION: 128
+          DIMENSION: 768
+        profiles:
+          coarse:
+            environment:
+              DIMENSION: 128
 
 
 volumes:
