--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,7 +38,8 @@ dependencies = [
     "amdsmi>=6.4.4",
     "python-dotenv>=1.2.1",
     "fastapi>=0.121.0",
-    "redis>=7.0.1"
+    "redis>=7.0.1",
+    "cryptography>=42.0.0"
 ]
 
 [project.optional-dependencies]
